<resources>
    <string name="action_settings">Settings</string>
    <string name="app_name">Tow_Buddy_Prototype</string>
    <string name="Accept_Coordinate_Send">Send</string>
    <string name="Active_Tows">Active Tows</string>
    <string name="Button_CopyCoordinates">Copy Coordinates</string>
    <string name="Cancel">Cancel</string>
    <string name="CancelTow_AlertDialog">Are you sure you don\'t need a tow anymore?</string>
    <string name="CancelTow_Button">Cancel Tow</string>
    <string name="Confirm_Location">Confirm Location</string>
    <string name="Coordinate_Alert_Box_Message">Do you wish to send this location data?</string>
    <string name="Currently_Assigned_Tows">Currently Assigned Tows</string>
    <string name="Decline_Coordinate_Send">Cancel</string>
    <string name="EmployeeData">Enter your credentials to sign in.</string>
    <string name="EmployeeLoginActivity">Employee Login Activity</string>
    <string name="EmployeeId">Employee Id Number</string>
    <string name="Failed_ToSendCoordinates">Send failed; please try again.</string>
    <string name="FirstTimeLogin_Button">Tap here if you are a new employee</string>
    <string name="I_am_sure">I am sure.</string>
    <string name="IncorrectCredentials">You have entered incorrect credentials, please try again.</string>
    <string name="IncorrectPhoneNumberMessage">Use 10 digit format.</string>
    <string name="Initial_Message">Press and hold marker, drag to change coordinates.</string>
    <string name="Not_a_customer">Tap here if you aren\'t a customer.</string>
    <string name="Okay">Okay</string>
    <string name="PhoneNumberToInput">Phone Number</string>
    <string name="RepositoryLayerLabel_Customer">CustomerRepositoryLayer</string>
    <string name="RepositoryLayerLabel_Employee">EmployeeRepositoryLayer</string>
    <string name="RequestTow_Button">REQUEST TOW</string>
    <string name="ResendCoordinates_Button">Resend Coordinates</string>
    <string name="SetLocationActivity">SetLocationActivity</string>
    <string name="SignInButton_Text">SIGN IN</string>
    <string name="SuccessfulCoordinateSend">Coordinates Sent</string>
    <string name="SuccessfulLogin">You are now logged in!</string>
    <string name="SuccessfulLogout">You have successfully logged out.</string>
    <string name="TextView_CustomerDetails">NULL DATA</string>
    <string name="TextView_CustomerCoordinates">NULL DATA</string>
    <string name="User_Name">First and last name</string>
    <string name="WelcomeMessage">Need a tow?\nEnter your info to get started.</string>
    <string name="WelcomeScreenButton">Request tow</string>
</resources>
