<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:visibility="visible">

    <Button
        android:id="@+id/SignInButton"
        android:layout_width="314dp"
        android:layout_height="68dp"
        android:layout_marginTop="44dp"
        android:background="@android:color/holo_green_light"
        android:onClick="employeeLogin"
        android:text="@string/SignInButton_Text"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmployeeIdNumber"
        tools:text="@string/SignInButton_Text" />

    <Button
        android:id="@+id/firstTimeSignIn"
        android:layout_width="258dp"
        android:layout_height="58dp"
        android:background="#D5CECE"
        android:text="@string/FirstTimeLogin_Button"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignInButton"
        app:layout_constraintVertical_bias="0.192"
        tools:text="@string/FirstTimeLogin_Button" />

    <EditText
        android:id="@+id/EmployeeIdNumber"
        android:layout_width="376dp"
        android:layout_height="51dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/EmployeeId"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmployeePhoneNumber" />

    <EditText
        android:id="@+id/EmployeeName"
        android:layout_width="374dp"
        android:layout_height="54dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/User_Name"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmployeeInfo"
        tools:text="First and last name" />

    <EditText
        android:id="@+id/EmployeePhoneNumber"
        android:layout_width="373dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:gravity="bottom"
        android:hint="@string/PhoneNumberToInput"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="@color/design_default_color_primary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmployeeName" />

    <TextView
        android:id="@+id/EmployeeInfo"
        android:layout_width="364dp"
        android:layout_height="182dp"
        android:layout_marginTop="60dp"
        android:fontFamily="serif"
        android:text="@string/EmployeeData"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/EmployeeData" />
</android.support.constraint.ConstraintLayout>